# bank_transaction_analytics

./: .gitignore  README.md  log_config.ini  pyproject.toml
data/: operations.xls
logs/: .gitignore
reports/: .gitignore
src/: config.py  decorators.py  files.py  loggers.py  main.py  reports.py  result.json  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py
