[tool.poetry]
name = "bank-transaction-analytics"
version = "0.1.0"
description = "bank transaction analytics"
authors = ["Kirill8769 <tkkrozn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
pandas = "^2.1.3"
requests = "^2.31.0"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"
polygon = "^1.1.3"
yfinance = "^0.2.32"
forex-python = "^1.8"
ccxt = "^4.1.67"
python-binance = "^1.0.19"


[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [".venv", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
